# DashIn

./: .gitignore  README.md
backend/: cleanup_json.py  import_csv.py  iso.csv  jsondata.json  jsondata_fixed_old.json  pyproject.toml
backend/api/: import.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_insight_published.py  0003_alter_insight_country_alter_insight_end_year_and_more.py  0004_alter_insight_start_year.py  0005_alter_insight_url.py  0006_alter_insight_sector.py  0007_alter_insight_country.py  0008_alter_insight_insight_alter_insight_pestle_and_more.py  0009_alter_insight_added_alter_insight_intensity_and_more.py  0010_alter_insight_insight_alter_insight_title_and_more.py
backend/backend/: settings.py
frontend/: .eslintrc.json  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  layout.tsx
frontend/src/components/: Header.tsx  app-sidebar.tsx  command-k.tsx  custom-sidebar-trigger.tsx  date-picker.tsx  map-chart.tsx  mode-toggle.tsx
frontend/src/components/charts/: custom-pi-chart.tsx  insights-over-time.tsx  map.tsx  rankings-region.tsx  region-map.tsx  region-stacked-pi.tsx  stacked-bar.tsx  time-chart.tsx
frontend/src/config/: api.ts
